--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     <artifactId>testPlatform</artifactId>
     <version>1.0-SNAPSHOT</version>
     <modules>
-        <module>clients</module>
+        <module>simulator</module>
         <module>commons</module>
         <module>clients-platform</module>
         <module>companies-platform</module>
