--- a/companies-platform/src/main/resources/application.properties
+++ b/companies-platform/src/main/resources/application.properties
@@ -4,10 +4,10 @@ server.port=8091
 management.endpoints.web.exposure.include=*
 
 #JDBC
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgresql_database
+spring.datasource.url=jdbc:postgresql://localhost:2222/companies
 spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.username=cornel
-spring.datasource.password=sefusefu
+spring.datasource.username=companies
+spring.datasource.password=companies
 spring.datasource.hikari.maximum-pool-size=5
 
 #JPA
