--- a/clients-platform/src/main/resources/application.properties
+++ b/clients-platform/src/main/resources/application.properties
@@ -4,10 +4,10 @@ server.port=8090
 management.endpoints.web.exposure.include=*
 
 #JDBC
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgresql_database
+spring.datasource.url=jdbc:postgresql://localhost:1111/clients
 spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.username=cornel
-spring.datasource.password=sefusefu
+spring.datasource.username=clients
+spring.datasource.password=clients
 spring.datasource.hikari.maximum-pool-size=5
 
 #JPA
