--- a/orders-platform/src/main/resources/application.properties
+++ b/orders-platform/src/main/resources/application.properties
@@ -4,14 +4,14 @@ server.port=8093
 management.endpoints.web.exposure.include=*
 
 #JDBC
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgresql_database
+spring.datasource.url=jdbc:postgresql://localhost:4444/orders
 spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.username=cornel
-spring.datasource.password=sefusefu
+spring.datasource.username=orders
+spring.datasource.password=orders
 spring.datasource.hikari.maximum-pool-size=5
 
 #JPA
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL10Dialect
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
 spring.jpa.open-in-view=false
