--- a/companies-platform/src/main/resources/application.properties
+++ b/companies-platform/src/main/resources/application.properties
@@ -15,3 +15,6 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL10Dialect
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
 spring.jpa.open-in-view=false
+
+#MQ
+spring.activemq.broker-url=tcp://localhost:61616
