--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,14 @@
 services:
 
+  #http://localhost:8161/admin/index.jsp
+  jms:
+    image: webcenter/activemq
+    container_name: activeMQ
+    ports:
+      - 8161:8161
+      - 61616:61616
+      - 61613:61613
+
   postgres_clients:
     image: postgres:latest
     container_name: clients
