--- a/companies-platform/src/main/resources/application.properties
+++ b/companies-platform/src/main/resources/application.properties
@@ -13,7 +13,7 @@ spring.datasource.hikari.maximum-pool-size=5
 #JPA
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL10Dialect
 spring.jpa.hibernate.ddl-auto=validate
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.jpa.open-in-view=false
 
 #MQ
