--- a/simulator/pom.xml
+++ b/simulator/pom.xml
@@ -19,6 +19,12 @@
         </dependency>
 
         <dependency>
+            <groupId>org.example</groupId>
+            <artifactId>commons</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
             <groupId>com.github.javafaker</groupId>
             <artifactId>javafaker</artifactId>
             <version>1.0.2</version>
