--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>companies-platform</module>
         <module>orders-platform</module>
         <module>products-platform</module>
+        <module>clients-sim</module>
     </modules>
     <packaging>pom</packaging>
 
