--- a/companies-app/pom.xml
+++ b/companies-app/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>companies-platform</artifactId>
+    <artifactId>companies-app</artifactId>
 
     <dependencies>
 
