--- a/clients-app/pom.xml
+++ b/clients-app/pom.xml
@@ -15,7 +15,7 @@
 
         <dependency>
             <groupId>org.example</groupId>
-            <artifactId>commons</artifactId>
+            <artifactId>platform-commons</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
 
@@ -34,6 +34,12 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
+
+        <!-- MAPPERS -->
+        <dependency>
+            <groupId>org.mapstruct</groupId>
+            <artifactId>mapstruct</artifactId>
         </dependency>
 
         <dependency>
