--- a/clients-sim/pom.xml
+++ b/clients-sim/pom.xml
@@ -20,7 +20,7 @@
 
         <dependency>
             <groupId>org.example</groupId>
-            <artifactId>commons</artifactId>
+            <artifactId>platform-commons</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
 
