--- a/platform-commons/pom.xml
+++ b/platform-commons/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>commons</artifactId>
+    <artifactId>platform-commons</artifactId>
 
     <dependencies>
         <dependency>
