--- a/pom.xml
+++ b/pom.xml
@@ -8,24 +8,25 @@
     <artifactId>testPlatform</artifactId>
     <version>1.0-SNAPSHOT</version>
     <modules>
-        <module>simulator</module>
-        <module>commons</module>
+<!--        <module>simulator</module>-->
+        <module>platform-commons</module>
         <module>clients-app</module>
-        <module>companies-app</module>
-        <module>orders-platform</module>
-        <module>products-platform</module>
+<!--        <module>companies-app</module>-->
+<!--        <module>orders-platform</module>-->
+<!--        <module>products-platform</module>-->
         <module>clients-sim</module>
     </modules>
     <packaging>pom</packaging>
 
     <properties>
-        <maven.compiler.target>17</maven.compiler.target>
-        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>19</maven.compiler.target>
+        <maven.compiler.source>19</maven.compiler.source>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
     <dependencyManagement>
         <dependencies>
+
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-dependencies</artifactId>
@@ -33,6 +34,14 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
+
+            <!-- MAPPERS -->
+            <dependency>
+                <groupId>org.mapstruct</groupId>
+                <artifactId>mapstruct</artifactId>
+                <version>1.5.5.Final</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
@@ -49,13 +58,6 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <scope>provided</scope>
-        </dependency>
-
-        <!-- MAPPERS -->
-        <dependency>
-            <groupId>org.mapstruct</groupId>
-            <artifactId>mapstruct</artifactId>
-            <version>1.5.5.Final</version>
         </dependency>
 
         <!-- TESTS -->
