--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
         <!--        <module>simulator</module>-->
         <module>platform-commons</module>
         <module>clients-app</module>
-        <!--        <module>companies-app</module>-->
+        <module>companies-app</module>
         <!--        <module>orders-platform</module>-->
         <!--        <module>products-platform</module>-->
         <module>clients-sim</module>
