--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,6 @@
     <artifactId>testPlatform</artifactId>
     <version>1.0-SNAPSHOT</version>
     <modules>
-        <!--        <module>simulator</module>-->
         <module>platform-commons</module>
         <module>clients-app</module>
         <module>companies-app</module>
@@ -17,6 +16,7 @@
         <module>clients-sim</module>
         <module>companies-sim</module>
         <module>products-sim</module>
+        <module>simulator</module>
     </modules>
     <packaging>pom</packaging>
 
