--- a/simulator/pom.xml
+++ b/simulator/pom.xml
@@ -50,6 +50,24 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
 
+        <!-- FEIGN REST client -->
+        <dependency>
+            <groupId>io.github.openfeign</groupId>
+            <artifactId>feign-okhttp</artifactId>
+            <version>12.2</version>
+        </dependency>
+        <dependency>
+            <groupId>io.github.openfeign</groupId>
+            <artifactId>feign-gson</artifactId>
+            <version>12.2</version>
+        </dependency>
+        <dependency>
+            <groupId>io.github.openfeign</groupId>
+            <artifactId>feign-slf4j</artifactId>
+            <version>12.2</version>
+        </dependency>
+
+        <!-- FAKER -->
         <dependency>
             <groupId>com.github.javafaker</groupId>
             <artifactId>javafaker</artifactId>
