--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>orders-app</module>
         <module>products-app</module>
         <module>simulator</module>
+        <module>business-flows</module>
     </modules>
     <packaging>pom</packaging>
 
@@ -30,6 +31,14 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-dependencies</artifactId>
                 <version>3.1.5</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>org.apache.camel.springboot</groupId>
+                <artifactId>camel-spring-boot-dependencies</artifactId>
+                <version>4.0.0-RC1</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
