--- a/business-flows/pom.xml
+++ b/business-flows/pom.xml
@@ -12,7 +12,10 @@
     <artifactId>business-flows</artifactId>
 
     <dependencies>
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.apache.camel.springboot</groupId>
             <artifactId>camel-spring-boot-starter</artifactId>
