--- a/companies-app/pom.xml
+++ b/companies-app/pom.xml
@@ -15,7 +15,7 @@
 
         <dependency>
             <groupId>org.example</groupId>
-            <artifactId>commons</artifactId>
+            <artifactId>platform-commons</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
 
