--- a/pom.xml
+++ b/pom.xml
@@ -58,7 +58,7 @@
         <!-- Spring BOOT -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter</artifactId>
+            <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
         <!-- LOMBOK -->
