--- a/business-flows/pom.xml
+++ b/business-flows/pom.xml
@@ -39,6 +39,20 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
 
+        <!-- JMS -->
+        <dependency>
+            <groupId>org.apache.camel.springboot</groupId>
+            <artifactId>camel-jms-starter</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.camel.springboot</groupId>
+            <artifactId>camel-activemq-starter</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-activemq</artifactId>
+        </dependency>
+
         <!-- FEIGN REST client -->
         <dependency>
             <groupId>io.github.openfeign</groupId>
