--- a/platform-commons/pom.xml
+++ b/platform-commons/pom.xml
@@ -28,6 +28,11 @@
             <scope>provided</scope>
         </dependency>
 
+        <dependency>
+            <groupId>io.github.openfeign</groupId>
+            <artifactId>feign-okhttp</artifactId>
+        </dependency>
+
     </dependencies>
 
 </project>
