--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,23 @@
                 <version>1.5.5.Final</version>
             </dependency>
 
+            <!-- FEIGN REST client -->
+            <dependency>
+                <groupId>io.github.openfeign</groupId>
+                <artifactId>feign-okhttp</artifactId>
+                <version>12.2</version>
+            </dependency>
+            <dependency>
+                <groupId>io.github.openfeign</groupId>
+                <artifactId>feign-gson</artifactId>
+                <version>12.2</version>
+            </dependency>
+            <dependency>
+                <groupId>io.github.openfeign</groupId>
+                <artifactId>feign-slf4j</artifactId>
+                <version>12.2</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
