--- a/flows-app/pom.xml
+++ b/flows-app/pom.xml
@@ -14,6 +14,12 @@
     <dependencies>
 
         <dependency>
+            <groupId>org.example</groupId>
+            <artifactId>platform-commons</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-webflux</artifactId>
         </dependency>
@@ -33,12 +39,6 @@
         <dependency>
             <groupId>org.apache.camel.springboot</groupId>
             <artifactId>camel-jackson-starter</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.example</groupId>
-            <artifactId>commons</artifactId>
-            <version>1.0-SNAPSHOT</version>
         </dependency>
 
         <!-- JMS -->
