--- a/flows-app/src/main/resources/application.properties
+++ b/flows-app/src/main/resources/application.properties
@@ -2,3 +2,5 @@ server.port=8100
 spring.activemq.broker-url=tcp://localhost:11111
 spring.activemq.user=admin
 spring.activemq.password=admin
+
+logging.level.root=WARN
