--- a/clients-app/src/main/resources/application.properties
+++ b/clients-app/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+logging.level.root=WARN
 server.port=8090
 
 #actuator
@@ -14,3 +15,4 @@ spring.datasource.hikari.maximum-pool-size=5
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=false
 spring.jpa.open-in-view=false
+
