--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <module>simulator</module>
         <module>flows-app</module>
         <module>invoices-app</module>
+        <module>eureka-server</module>
     </modules>
     <packaging>pom</packaging>
 
@@ -32,6 +33,14 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-dependencies</artifactId>
                 <version>3.2.5</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-starter-parent</artifactId>
+                <version>2023.0.1</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
