--- a/companies-app/src/main/resources/application.properties
+++ b/companies-app/src/main/resources/application.properties
@@ -1,20 +1,21 @@
+#logging
 logging.level.root=INFO
-server.port=8091
-
 #actuator
 management.endpoints.web.exposure.include=*
-
 #JDBC
 spring.datasource.url=jdbc:postgresql://localhost:2222/companies
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.datasource.username=companies
 spring.datasource.password=companies
 spring.datasource.hikari.maximum-pool-size=5
-
 #JPA
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=false
 spring.jpa.open-in-view=false
-
 #MQ
 spring.activemq.broker-url=tcp://localhost:11111
+#EUREKA
+spring.application.name=companies-cloud
+server.port=0
+eureka.client.serviceUrl.defaultZone=${EUREKA_URI:http://localhost:8761/eureka}
+eureka.instance.preferIpAddress=true
