--- a/invoices-app/src/main/resources/application.properties
+++ b/invoices-app/src/main/resources/application.properties
@@ -1,16 +1,17 @@
-server.port=8094
-
 #actuator
 management.endpoints.web.exposure.include=*
-
 #JDBC
 spring.datasource.url=jdbc:postgresql://localhost:5555/invoices
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.datasource.username=invoices
 spring.datasource.password=invoices
 spring.datasource.hikari.maximum-pool-size=5
-
 #JPA
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=false
 spring.jpa.open-in-view=false
+#EUREKA
+spring.application.name=invoices-cloud
+server.port=0
+eureka.client.serviceUrl.defaultZone=${EUREKA_URI:http://localhost:8761/eureka}
+eureka.instance.preferIpAddress=true
