--- a/clients-app/src/main/resources/application.properties
+++ b/clients-app/src/main/resources/application.properties
@@ -1,18 +1,19 @@
+#logging
 logging.level.root=INFO
-server.port=8090
-
 #actuator
 management.endpoints.web.exposure.include=*
-
 #JDBC
 spring.datasource.url=jdbc:postgresql://localhost:1111/clients
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.datasource.username=clients
 spring.datasource.password=clients
 spring.datasource.hikari.maximum-pool-size=5
-
 #JPA
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=false
 spring.jpa.open-in-view=false
-
+#EUREKA
+spring.application.name=clients-cloud
+server.port=0
+eureka.client.serviceUrl.defaultZone=${EUREKA_URI:http://localhost:8761/eureka}
+eureka.instance.preferIpAddress=true
