--- a/flows-app/src/main/resources/application.properties
+++ b/flows-app/src/main/resources/application.properties
@@ -1,5 +1,11 @@
+#logging
 logging.level.root=WARN
-server.port=8100
+#mq
 spring.activemq.broker-url=tcp://localhost:11111
 spring.activemq.user=admin
 spring.activemq.password=admin
+#EUREKA
+spring.application.name=flows-cloud
+server.port=0
+eureka.client.serviceUrl.defaultZone=${EUREKA_URI:http://localhost:8761/eureka}
+eureka.instance.preferIpAddress=true
