--- a/products-app/src/main/resources/application.properties
+++ b/products-app/src/main/resources/application.properties
@@ -1,17 +1,19 @@
+#logging
 logging.level.root=INFO
-server.port=8092
-
 #actuator
 management.endpoints.web.exposure.include=*
-
 #JDBC
 spring.datasource.url=jdbc:postgresql://localhost:3333/products
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.datasource.username=products
 spring.datasource.password=products
 spring.datasource.hikari.maximum-pool-size=5
-
 #JPA
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=false
 spring.jpa.open-in-view=false
+#EUREKA
+spring.application.name=products-cloud
+server.port=0
+eureka.client.serviceUrl.defaultZone=${EUREKA_URI:http://localhost:8761/eureka}
+eureka.instance.preferIpAddress=true
