--- a/simulator/pom.xml
+++ b/simulator/pom.xml
@@ -35,6 +35,10 @@
             <groupId>org.apache.camel.springboot</groupId>
             <artifactId>camel-jackson-starter</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+        </dependency>
 
         <!-- FEIGN REST client -->
         <dependency>
