--- a/flows-app/src/main/resources/application.properties
+++ b/flows-app/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 #logging
 logging.level.root=WARN
+#actuator
+management.endpoints.web.exposure.include=*
 #mq
 spring.activemq.broker-url=tcp://localhost:11111
 spring.activemq.user=admin
