--- a/flows-app/pom.xml
+++ b/flows-app/pom.xml
@@ -59,12 +59,10 @@
             <artifactId>spring-boot-starter-activemq</artifactId>
         </dependency>
 
-        <!-- https://mvnrepository.com/artifact/org.springdoc/springdoc-openapi-starter-webmvc-ui -->
-        <!-- http://localhost:8080/swagger-ui/index.html#/ -->
+        <!-- http://localhost:8090/swagger-ui/index.html#/ -->
         <dependency>
-            <groupId>org.springdoc</groupId>
-            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
-            <version>2.4.0</version>
+            <groupId>org.apache.camel.springboot</groupId>
+            <artifactId>camel-rest-openapi-starter</artifactId>
         </dependency>
 
         <!-- FEIGN REST client -->
