--- a/flows-app/src/main/resources/application.properties
+++ b/flows-app/src/main/resources/application.properties
@@ -10,3 +10,5 @@ spring.activemq.password=admin
 spring.application.name=flows-cloud
 server.port=8090
 eureka.client.serviceUrl.defaultZone=${EUREKA_URI:http://localhost:8761/eureka}
+#OKHTTPCLIENT
+spring.cloud.openfeign.okhttp.enabled=true
