--- a/clients-app/src/main/resources/application.properties
+++ b/clients-app/src/main/resources/application.properties
@@ -2,6 +2,7 @@
 logging.level.root=INFO
 #actuator
 management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
 #JDBC
 spring.datasource.url=jdbc:postgresql://localhost:1111/clients
 spring.datasource.driverClassName=org.postgresql.Driver
