--- a/flows-app/src/main/resources/application.properties
+++ b/flows-app/src/main/resources/application.properties
@@ -2,6 +2,7 @@
 logging.level.root=INFO
 #actuator
 management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
 #mq
 spring.activemq.broker-url=tcp://localhost:11111
 spring.activemq.user=admin
