--- a/orders-app/src/main/resources/application.properties
+++ b/orders-app/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 #actuator
 management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
 #JDBC
 spring.datasource.url=jdbc:postgresql://localhost:4444/orders
 spring.datasource.driverClassName=org.postgresql.Driver
