--- a/eureka-server/docker-compose.yml
+++ b/eureka-server/docker-compose.yml
@@ -28,3 +28,13 @@ services:
       - ./grafana/provisioning/datasources:/etc/grafana/provisioning/datasources
     depends_on:
       - prometheus
+
+  loki:
+    image: grafana/loki
+    container_name: loki
+    ports:
+      - "3100:3100"
+    volumes:
+      - ./loki/loki-config.yml:/etc/loki/loki-config.yaml
+    depends_on:
+      - grafana
