--- a/orders-app/src/main/resources/application.properties
+++ b/orders-app/src/main/resources/application.properties
@@ -4,11 +4,12 @@ logging.level.root=info
 management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always
 #JDBC
-spring.datasource.url=jdbc:postgresql://localhost:4444/orders
+spring.datasource.url=jdbc:postgresql://localhost:5432/all
 spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.username=orders
-spring.datasource.password=orders
+spring.datasource.username=all
+spring.datasource.password=all
 spring.datasource.hikari.maximum-pool-size=5
+spring.datasource.hikari.schema=orders
 #JPA
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=false
