--- a/clients-app/src/main/resources/application.properties
+++ b/clients-app/src/main/resources/application.properties
@@ -1,14 +1,15 @@
 #logging
-logging.level.root=warn
+logging.level.root=info
 #actuator
 management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always
 #JDBC
-spring.datasource.url=jdbc:postgresql://localhost:1111/clients
+spring.datasource.url=jdbc:postgresql://localhost:5432/all
 spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.username=clients
-spring.datasource.password=clients
+spring.datasource.username=all
+spring.datasource.password=all
 spring.datasource.hikari.maximum-pool-size=5
+spring.datasource.hikari.schema=clients
 #JPA
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=false
