--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,47 @@
 services:
 
-  #http://localhost:8161/admin/index.jsp
-  jms:
-    image: webcenter/activemq
-    container_name: activeMQ
+  #http://localhost:8081/ui/clusters/local/topics
+  kafka-ui:
+    image: provectuslabs/kafka-ui
+    container_name: kafka-ui
+    environment:
+      KAFKA_CLUSTERS_0_NAME: local
+      KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS: "kafka:29092,localhost:29092,localhost:9092,kafka:9092"
+      KAFKA_CLUSTERS_0_ZOOKEEPER: localhost:2181
+      KAFKA_CLUSTERS_0_READONLY: true
     ports:
-      - "8161:8161"
-      - "11111:61616"
+      - "8081:8080"
+    depends_on:
+      - zookeeper
+      - kafka
 
-  postgres_all:
+  zookeeper:
+    image: confluentinc/cp-zookeeper:latest
+    container_name: zookeeper
+    environment:
+      ZOOKEEPER_CLIENT_PORT: 2181
+      ZOOKEEPER_TICK_TIME: 2000
+    ports:
+      - "22181:2181"
+
+  kafka:
+    image: confluentinc/cp-kafka:latest
+    container_name: kafka
+    depends_on:
+      - zookeeper
+    ports:
+      - "29092:29092"
+    environment:
+      KAFKA_BROKER_ID: 1
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092,PLAINTEXT_HOST://localhost:29092
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
+      KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+
+  postgres:
     image: postgres:latest
-    container_name: all
+    container_name: postgres
     ports:
       - "5432:5432"
     environment:
