--- a/flows-app/src/main/resources/application.properties
+++ b/flows-app/src/main/resources/application.properties
@@ -4,10 +4,10 @@ spring.main.banner-mode=off
 #actuator
 management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always
-#mq
-spring.activemq.broker-url=tcp://localhost:11111
-spring.activemq.user=admin
-spring.activemq.password=admin
+#KAFKA
+kafka.bootstrapAddress=localhost:29092
+topic.completedOrders=CompletedOrdersTopic
+topic.toBeConfirmedOrders=ToBeConfirmedOrdersTopic
 #EUREKA
 spring.application.name=flows-cloud
 server.port=0
