--- a/products-app/src/main/resources/application.properties
+++ b/products-app/src/main/resources/application.properties
@@ -9,8 +9,8 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/all
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.datasource.username=all
 spring.datasource.password=all
-spring.datasource.hikari.maximum-pool-size=5
 spring.datasource.hikari.schema=products
+spring.datasource.hikari.minimum-idle=3
 #JPA
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=false
