--- a/clients-app/src/main/resources/application.properties
+++ b/clients-app/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/all
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.datasource.username=all
 spring.datasource.password=all
-spring.datasource.hikari.maximum-pool-size=5
+spring.datasource.hikari.minimum-idle=1
 spring.datasource.hikari.schema=clients
 #JPA
 spring.jpa.hibernate.ddl-auto=validate
