--- a/invoices-app/src/main/resources/application.properties
+++ b/invoices-app/src/main/resources/application.properties
@@ -9,8 +9,8 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/all
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.datasource.username=all
 spring.datasource.password=all
-spring.datasource.hikari.maximum-pool-size=20
 spring.datasource.hikari.schema=invoices
+spring.datasource.hikari.minimum-idle=5
 #JPA
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=false
