--- a/simulator/pom.xml
+++ b/simulator/pom.xml
@@ -43,9 +43,9 @@
 
         <!-- FAKER -->
         <dependency>
-            <groupId>com.github.javafaker</groupId>
-            <artifactId>javafaker</artifactId>
-            <version>1.0.2</version>
+            <groupId>net.datafaker</groupId>
+            <artifactId>datafaker</artifactId>
+            <version>2.4.2</version>
         </dependency>
         <dependency>
             <groupId>org.example</groupId>
