--- a/eureka-server/docker-compose.yml
+++ b/eureka-server/docker-compose.yml
@@ -8,33 +8,33 @@ services:
     ports:
       - "8761:8761"
 
-  prometheus:
-    image: prom/prometheus
-    container_name: prometheus
-    ports:
-      - "9090:9090"
-    volumes:
-      - ./prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
-    depends_on:
-      - eureka-server
-
-  grafana:
-    image: grafana/grafana
-    container_name: grafana
-    ports:
-      - "3000:3000"
-    restart: unless-stopped
-    volumes:
-      - ./grafana/provisioning/datasources:/etc/grafana/provisioning/datasources
-    depends_on:
-      - prometheus
-
-  loki:
-    image: grafana/loki
-    container_name: loki
-    ports:
-      - "3100:3100"
-    volumes:
-      - ./loki/loki-config.yml:/etc/loki/loki-config.yaml
-    depends_on:
-      - grafana
+#  prometheus:
+#    image: prom/prometheus
+#    container_name: prometheus
+#    ports:
+#      - "9090:9090"
+#    volumes:
+#      - ./prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
+#    depends_on:
+#      - eureka-server
+#
+#  grafana:
+#    image: grafana/grafana
+#    container_name: grafana
+#    ports:
+#      - "3000:3000"
+#    restart: unless-stopped
+#    volumes:
+#      - ./grafana/provisioning/datasources:/etc/grafana/provisioning/datasources
+#    depends_on:
+#      - prometheus
+#
+#  loki:
+#    image: grafana/loki
+#    container_name: loki
+#    ports:
+#      - "3100:3100"
+#    volumes:
+#      - ./loki/loki-config.yml:/etc/loki/loki-config.yaml
+#    depends_on:
+#      - grafana
