--- a/flows-app/src/main/resources/application.properties
+++ b/flows-app/src/main/resources/application.properties
@@ -6,8 +6,8 @@ management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always
 #KAFKA
 kafka.bootstrapAddress=localhost:29092
-topic.completedOrders=CompletedOrdersTopic
-topic.toBeConfirmedOrders=ToBeConfirmedOrdersTopic
+kafka.topic.completedOrders=CompletedOrdersTopic
+kafka.topic.toBeConfirmedOrders=ToBeConfirmedOrdersTopic
 #EUREKA
 spring.application.name=flows-cloud
 server.port=0
